static/stylesheets/game.css
@import url('/static/stylesheets/base.css');
@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');

body {
    font-family: 'Megabeat', sans-serif;
    background-color: var(--bg);
    color: var(--color);
    font-size: 1.4rem;
    line-height: 1.6;
}

main {
    width: 600px;
    margin: 50px auto;
}

h1 {
    color: var(--mint);
}

h1 svg {
    width: 40px;
    fill: var(--mint);
}

#header {
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin: 20px 6px 30px;
}

#buttons {
    text-align: right;
}

#info {
    color: var(--mint);
}

button {
    background: rgba(255, 255, 255, .2);
    border: 1px solid var(--mint);
    color: var(--white);
    padding: 5px 20px;
    border-radius: 5px;
    cursor: pointer;
    transition: all 0.5s;
}

button:hover {
    background: var(--purple);
    color: var(--white);
    border-color: var(--purple);
    box-shadow: 0 0 5px var(--purple), 0 0 25px var(--purple), 0 0 50px var(--purple), 0 0 100px var(--purple);
    transition: all 0.3s ease-in-out;
}

div#game {
    line-height: 35px;
    height: 105px;
    overflow: hidden;
    position: relative;
}

div#game:focus {
    outline: 0;
}

#words {
    filter: blur(5px);
    color: var(--white);
}

#game:focus #words {
    filter: blur(0);
}

#focus-error {
    position: absolute;
    inset: 0;
    text-align: center;
    padding-top: 35px;
    color: var(--mandarin);
}

#game:focus #focus-error {
    display: none;
} 

div.word {
    display: inline-block;
    font-family: 'Roboto Mono', monospace;
    margin: 0 5px;
}

.letter.correct {
    color: var(--mint);
}

.letter.incorrect {
    color: var(--mandarin);
}

#game.over #words {
    opacity: .5;
    filter: blur(0px);
}

#game.over:focus #cursor {
    display: none;
}

#game.over #focus-error {
    display: none;
}

#textbox-container {
    position: relative; 
}

#textbox-container input[type="text"] {
    background-color: transparent; 
    color: white;
    border: none; 
    border-bottom: 1px solid white; 
    border-radius: 0; 
    padding: 10px;
    width: 500px;
    height: 30px;
    font-size: 16px; 
    outline: none;
    caret-color: var(--purple); 
}

@keyframes blink {
    0% {
        opacity: 1;
    }
    50% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

#cursor {
    display: none;
    width: 2px;
    height: 1.6rem;
    background: var(--primary);
    position: fixed;
    animation: blink .3s infinite;
}

#textbox-container input[type="text"]:focus {
    border-bottom: 1px solid var(--mint);
}

#textbox-container input[type="text"]::selection {
    background-color: rgba(128, 0, 128, 0.3); 
}

#textbox-container input[type="text"]::placeholder {
    color: gray; 
}

#textbox-container input[type="text"]::after {
    content: '';
    width: 2px; 
    background-color: var(--purple); 
    animation: blink 0.3s infinite; 
}

